Resolves: tdf#119700 save correct table:last-row-spanned

Regression from

    commit f6e6a6139e90d6e88fb65308e8592193ac602a8a
    CommitDate: Mon Nov 21 07:49:06 2016 +0000

        tdf#48140 Replace uno CellRangeAddress and CellAddress with direct calls

that calculated endrow-startcol instead of endrow-startrow.

Change-Id: Ie576f9abdcdc23fc5f0a06735caadc24e975360f
Reviewed-on: https://gerrit.libreoffice.org/63374
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins